syntax="proto3";

package protobuf_entity;

option go_package = "/protobuf_entity";

message EntryTrans {
    string entry_id=1;
    string url=2;
    sint64 created_at=3;
    sint64 published_at=4;
    string title=5;
    string author=6;
    string feed_id=7;
    string feed_url=8;
    string image_url=9;
    repeated string keyword_list=10;
    string language=11;
    repeated float embedding=12;
    float recall_point=13;
    int64 published_at_timestamp=14;
}

message ListEntryTrans {
    repeated EntryTrans entries=1;
}